# vmfleet

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  Makefile  README.md  RELEASING.md  build.rs  justfile
.githooks/: pre-push
.github/workflows/: ci.yml  live-smoke.yml  promote.yml  release.yml
docs/: ARCHITECTURE.md  CONFIG.md  OPERATIONS.md  TESTING.md
examples/: vmfleet.toml
provision/: deps.sh  runner.sh
src/: admission.rs  cmd.rs  commands.rs  config.rs  e2e_offline.rs  github.rs  main.rs  multipass.rs  naming.rs  oauth.rs  paths.rs  resources.rs  selfupdate.rs  supervisor.rs  systemd.rs  testsupport.rs  worker.rs
tests/: cli_smoke.rs
