[package]
name = "vmfleet"
version = "0.1.0"
edition = "2021"
description = "Single-host autoscaling fleet of ephemeral Multipass-VM GitHub Actions runners"
license = "MIT"
repository = "https://github.com/gagalo1234/vmfleet"
readme = "README.md"

[[bin]]
name = "vmfleet"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
ureq = { version = "2", features = ["json", "tls"] }
anyhow = "1"
nix = { version = "0.29", features = ["fs", "signal", "process"] }
dialoguer = "0.11"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
libc = "0.2"
# self-update: verify release checksums, unpack tarballs, swap the running binary.
sha2 = "0.10"
flate2 = "1"
tar = "0.4"
self-replace = "1"

[profile.release]
strip = true
lto = "thin"
codegen-units = 1
